# multi-tenant-todo-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test_ci.yml
config/: settings.py
customers/migrations/: 0001_initial.py
